[package]
name = "gateway"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]

[dependencies]
crowbar = "0.2"
cpython-json = { version = "0.2", default-features = false }
cpython = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
python3-sys = { version = "0.1.3", features = ["python-3-4"], optional = true }

[features]
default = ["cpython/python3-sys"]
