[package]
name = "lando"
version = "0.0.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust interface lambda API gateway events"
documentation = "https://softprops.github.io/gateway"
homepage = "https://github.com/softprops/gateway"
repository = "https://github.com/softprops/gateway"
keywords = ["serverless", "aws", "lambda", "http"]
license = "MIT"
readme = "README.md"
categories = ["network-programming", "web-programming::http-server"]
include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*"
]

[badges]
travis-ci = { repository = "softprops/gateway" }
coveralls = { repository = "softprops/gateway" }

[dependencies]
base64 = "0.9"
bytes = "0.4"
http = "0.1"
crowbar = "0.2"
cpython-json = { version = "0.2", default-features = false }
cpython = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
python3-sys = { version = "0.1.3", features = ["python-3-4"], optional = true }

[features]
default = ["cpython/python3-sys"]