[package]
name = "lando"
version = "0.1.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust http interface for AWS lambda API gateway events"
documentation = "https://softprops.github.io/lando"
homepage = "https://github.com/softprops/lando"
repository = "https://github.com/softprops/lando"
keywords = ["serverless", "aws", "lambda", "http", "aws-lambda"]
license = "MIT"
readme = "README.md"
categories = ["network-programming", "web-programming::http-server"]
include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*"
]

[badges]
travis-ci = { repository = "softprops/lando" }
coveralls = { repository = "softprops/lando" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
pretty_assertions = "0.5"

[dependencies]
base64 = "0.10"
bytes = "0.4"
crowbar = "0.2"
cpython = "0.1"
failure = "0.1"
failure_derive = "0.1"
# https://github.com/ilianaw/rust-crowbar/issues/20
# work around for odd openssl installation in lambda python 3.6 runtime
python3-sys =  { version = "0.1.3", features = ["python-3-4"], optional = true }
http = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
mashup = "0.1"
lando-attr = { version = "0.1.1", path = "lando-attr"}

[features]
default = ["cpython/python3-sys"]